<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/iv_trip_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:src="@android:color/holo_red_light"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_trip_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/dummy_location"
                android:layout_margin="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/colorWhiteTransparent"
                android:drawableStart="@drawable/ic_location_black_24dp"
                android:drawablePadding="8dp"
                android:layout_gravity="bottom"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_trip_title"
                style="@style/TextHeading.Large"
                tools:text="@string/nama_trip"/>

            <TextView
                android:id="@+id/tv_trip_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:lineSpacingMultiplier="1.2"
                android:textSize="16sp"
                tools:text="@string/lorem_ipsum"/>

            <TextView
                style="@style/TextHeading.Small"
                android:text="@string/penulis"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/default_avatar"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/dummy_user"
                    android:layout_toEndOf="@id/iv_avatar"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
